--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,33 @@
-font-family: 'Quicksand', sans-serif;
+/* font-family: 'Quicksand', sans-serif;
 COLORS
 light-yellow - #f7e4bf;
 light-blue - #78a7c6;
 dark-blue - #134d71;
 white - #ffffff;
-black - #000000;
+black - #000000; */
 
 
 
 /* ~~~~~~~~~~~~~~ HOMEPAGE ~~~~~~~~~~~~~~~~ */
 
-.background {
+body {
+  background-image: linear-gradient(#134d71, #78a7c6, #f7e4bf);
+  height: 100vh
+}
 
+h1 {
+  font-family: 'Quicksand', sans-serif;
+  color: #ffffff;
+}
+
+h2 {
+  font-family: 'Quicksand', sans-serif;
+  color: #ffffff;
 }
 
 /* ~~~~~~~~~~~~~~ CONTROLS ~~~~~~~~~~~~~~~~ */
+
+div {
+  font-family: 'Quicksand', sans-serif;
+  color: #000000
+}
