--- a/styles.css
+++ b/styles.css
@@ -12,35 +12,85 @@ black - #000000; */
 
 body {
   background-image: linear-gradient(#134d71, #78a7c6, #f7e4bf);
-  height: 100vh
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
   font-family: 'Quicksand', sans-serif;
   color: #ffffff;
+  margin: 5vh;
 }
 
 h2 {
   font-family: 'Quicksand', sans-serif;
   color: #ffffff;
+  margin-top: 5vh;
+  /* margin-bottom: -.2vh; */
 }
 
 .button-rectangle {
-  width:200px;
-  height:100px;
+  width:40vw;
+  height:15vh;
   background: #ffffff;
-  border-radius: 25px;
+  border-radius: 10px;
+  margin-top: 0.2vh;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .quote-rectangle {
-  width:200px;
-  height:100px;
+  width:60vw;
+  height:25vh;
   background: #ffffff;
-  border-radius: 25px;
+  margin: 15vh;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+   height:50%;
+   width:10%;
 }
 /* ~~~~~~~~~~~~~~ CONTROLS ~~~~~~~~~~~~~~~~ */
 
-nav {
+
+
+form {
   font-family: 'Quicksand', sans-serif;
-  color: #000000
+  color: #000000;
+  display: flex;
+  width: 60%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#affirmation {
+  margin-right: 4%;
+}
+
+#mantra {
+  margin-right: 4%;
+  margin-left: 55%;
+}
+
+
+.button {
+  font-family: 'Quicksand', sans-serif;
+  color: #ffffff;
+  background-color: #134d71;
+  border-radius: 5px;
+  height: 4vh;
+  width: 15vw;
+  font-size: 100%;
+  border: none;
 }
