--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,13 @@ h2 {
   /* margin-bottom: -.2vh; */
 }
 
+.quote-output {
+  font-family: 'Quicksand', sans-serif;
+  color: #000000;
+  font-size: 150%;
+  text-align: center;
+}
+
 .button-rectangle {
   width:40vw;
   height:15vh;
@@ -85,6 +92,17 @@ form {
 
 
 .button {
+  font-family: 'Quicksand', sans-serif;
+  color: #ffffff;
+  background-color: #134d71;
+  border-radius: 5px;
+  height: 4vh;
+  width: 15vw;
+  font-size: 100%;
+  border: none;
+}
+
+.delete-button {
   font-family: 'Quicksand', sans-serif;
   color: #ffffff;
   background-color: #134d71;
